added solutions section

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,12 +1,11 @@
 // Font
 $font-family-sans-serif: 'Poppins', sans-serif;
 
-@import '../node_modules/bootstrap/scss/bootstrap';
 // Font
 $font-family-sans-serif: 'Poppins', sans-serif;
 
 // Colors
-$primary: #fe6b2a;
+$primary: #669bbc;
 $secondary: #35353a;
 $dark: #000;
 $body-bg: #0c0c0e;
