Added sections and Fixed coloring

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -6,9 +6,9 @@ $font-family-sans-serif: 'Poppins', sans-serif;
 
 // Colors
 $primary: #669bbc;
-$secondary: #35353a;
-$dark: #000;
-$body-bg: #0c0c0e;
+$secondary: #002030;
+$dark: #003049;
+$body-bg: #001A26;
 $body-color: #fff;
 
 // Spacing
